import CrewMember from "./CrewMember";

export default class Pilot extends CrewMember {
}
