import CrewMember from "./CrewMember";

export default class Steward extends CrewMember {
}
