export enum FlightStatus {
  Active,
  Canceled,
}
